src/global.scss
/*
 * App Global CSS
 * ----------------------------------------------------------------------------
 * Put style rules here that you want to apply globally. These styles are for
 * the entire app and not just one component. Additionally, this file can be
 * used as an entry point to import other CSS/Sass files to be included in the
 * output CSS.
 * For more information on global stylesheets, visit the documentation:
 * https://ionicframework.com/docs/layout/global-stylesheets
 */

/* Core CSS required for Ionic components to work properly */
@import "@ionic/angular/css/core.css";

/* Basic CSS for apps built with Ionic */
@import "@ionic/angular/css/normalize.css";
@import "@ionic/angular/css/structure.css";
@import "@ionic/angular/css/typography.css";
@import '@ionic/angular/css/display.css';

/* Optional CSS utils that can be commented out */
@import "@ionic/angular/css/padding.css";
@import "@ionic/angular/css/float-elements.css";
@import "@ionic/angular/css/text-alignment.css";
@import "@ionic/angular/css/text-transformation.css";
@import "@ionic/angular/css/flex-utils.css";

ion-menu[menuId="settingsMenu"] {
  --background: #ffffff;
  --ion-background-color: #ffffff;
  --ion-text-color: #000000;
}

ion-menu[menuId="settingsMenu"] ion-content {
  --background: #ffffff;
  --color: #000000;
}

ion-menu[menuId="settingsMenu"] ion-toolbar {
  --background: #ffffff;
  --color: #000000;
  --border-color: #e5e5e5;
}

ion-menu[menuId="settingsMenu"] ion-list {
  background: #ffffff;
}

ion-menu[menuId="settingsMenu"] ion-item {
  --background: #ffffff;
  --color: #000000;
  --border-color: #e5e5e5;
}

ion-menu[menuId="settingsMenu"] ion-label,
ion-menu[menuId="settingsMenu"] ion-note,
ion-menu[menuId="settingsMenu"] ion-select,
ion-menu[menuId="settingsMenu"] ion-select-option,
ion-menu[menuId="settingsMenu"] ion-toggle {
  color: #000000;
}

// DARK MODE STYLES
body.dark-theme {
  //turns main background to black and texts to white
  &, .ion-app, .ion-page, #container, .wrapper, ion-modal {
    background-color: #000000 !important;
    color: #ffffff !important;
  }

  .top, .middle, .controls {
    background-color: #000000 !important;
    color: #ffffff !important;
  }

  //OVERRIDE: SVG Text and Ticks indide Tuner
  chromatic-tuner svg path[fill="#4E4E4E"] {
    fill: #ffffff !important;
  }
  chromatic-tuner svg path[stroke="#4E4E4E"] {
    stroke: #ffffff !important;
  }

  //OVERRIDE: Metronome (1,2,3,4), Semaphore (REST/LISTEN/PLAY), Score Note Name
  .metronome-bullet, 
  .metronome-bullet h1,
  #metronome-label,
  semaphore-light, 
  semaphore-light *,
  .score,
  score-view,
  score-view * {
    color: #ffffff !important;
  }

  //4. OVERRIDE: Tempo aur Note Selectors (Boxes Black, Text White, Border Fixed)
  tempo-selector, note-selector {
    background-color: #000000 !important;
    color: #ffffff !important;
    overflow: hidden !important; 
    border-radius: 6px !important; 
  }

  tempo-selector div, note-selector div {
    background-color: transparent !important;
  }

  tempo-selector *, note-selector * {
    color: #ffffff !important;
  }

  tempo-selector img, note-selector img,
  tempo-selector svg, note-selector svg {
    filter: invert(1) !important;
    background-color: transparent !important;
  }

  //Buttons override inside controls
  .controls button {
    color: #e64c4c !important;
  }
  .controls .tempo-wrapper button {
    color: #fead26 !important;
  }

  //OVERRIDE: Main Score Area (Background Black, VexFlow Notes White)
  score-view div#score {
    background-color: #000000 !important;
  }

  score-view svg {
    filter: invert(1) !important;
  }

  //OVERRIDE: make clarinet and oboe images visible in  Dark mode
  .clarinet img, .oboe img {
    filter: invert(1) !important;
  }

  // Ensure bottom tab bar follows dark mode palette.
  ion-tab-bar,
  ion-tab-bar.custom-tab-bar {
    --background: #111111 !important;
    --color: #cfcfcf !important;
    --color-selected: #ffffff !important;
    border-top: 1px solid #2a2a2a !important;
  }

  ion-tab-button {
    --color: #cfcfcf !important;
    --color-selected: #ffffff !important;
  }

  // Settings menu styles so Options panel does not stay light.
  ion-menu[menuId="settingsMenu"] {
    --background: #000000 !important;
    --ion-background-color: #000000 !important;
    --ion-text-color: #ffffff !important;
  }

  ion-menu[menuId="settingsMenu"] ion-content {
    --background: #000000 !important;
    --color: #ffffff !important;
  }

  ion-menu[menuId="settingsMenu"] ion-toolbar {
    --background: #000000 !important;
    --color: #ffffff !important;
    --border-color: #1f1f1f !important;
  }

  ion-menu[menuId="settingsMenu"] ion-list {
    background: #000000 !important;
  }

  ion-menu[menuId="settingsMenu"] ion-item {
    --background: #000000 !important;
    --color: #ffffff !important;
    --border-color: #1f1f1f !important;
  }

  ion-menu[menuId="settingsMenu"] ion-label,
  ion-menu[menuId="settingsMenu"] ion-note,
  ion-menu[menuId="settingsMenu"] ion-select,
  ion-menu[menuId="settingsMenu"] ion-select-option,
  ion-menu[menuId="settingsMenu"] ion-toggle {
    color: #ffffff !important;
  }

  // Keep standalone tuner route dark as well.
  app-pitchlite,
  app-pitchlite ion-content,
  app-pitchlite .chromatic-tuner {
    --background: #000000 !important;
    background: #000000 !important;
    color: #ffffff !important;
  }
}

